# mere-config-lite

./: .gitignore  CMakeLists.txt  README.md  mere-config-lite-src.pri  mere-config-lite.pro
src/: builder.cpp  builder.h  config.cpp  config.h  configtraverser.cpp  configtraverser.h  crossconfig.cpp  crossconfig.h  document.cpp  document.h  dotconfig.cpp  dotconfig.h  dotparser.cpp  dotparser.h  exception.cpp  exception.h  global.h  group.cpp  group.h  groupconfig.cpp  groupconfig.h  groupparser.cpp  groupparser.h  homespec.cpp  homespec.h  iniconfig.cpp  iniconfig.h  iniparser.cpp  iniparser.h  key.cpp  key.h  kvconfig.cpp  kvconfig.h  kvparser.cpp  kvparser.h  parser.cpp  parser.h  pathresolver.cpp  pathresolver.h  property.cpp  (+13 more)
src/parser/: ckparser.cpp  ckparser.h  commentconfig.cpp  commentconfig.h  config.cpp  config.h  configex.cpp  configex.h  crossconfig.cpp  crossconfig.h  crossparser.cpp  crossparser.h  documentconfig.cpp  documentconfig.h  documentparser.cpp  documentparser.h  documentspec.h  dotconfig.cpp  dotconfig.h  dotparser.cpp  dotparser.h  gkparser.cpp  gkparser.h  groupconfig.cpp  groupconfig.h  groupparser.cpp  groupparser.h  iniparser.cpp  iniparser.h  keyconfig.cpp  keyconfig.h  kvparser.cpp  kvparser.h  lineparser.cpp  lineparser.h  parser.cpp  parser.h  propertyconfig.cpp  propertyconfig.h  propertyparser.cpp  (+3 more)
src/spec/: base.cpp  base.h  baseex.cpp  baseex.h  comment.cpp  comment.h  document.cpp  document.h  domain.cpp  domain.h  dotted.cpp  dotted.h  group.cpp  (+7 more)
tests/: testgroupparser.cpp  testkvparser.cpp  testparser.cpp  tests  tests.pro  tests.qrc
(+19 files in other folders)
